@@ -19,6 +19,7 @@
 
 #include "Control.hxx"
 #include "System.hxx"
+#include "StellaKeys.hxx"
 #include "CompuMate.hxx"
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -29,11 +30,15 @@ CompuMate::CompuMate(CartridgeCM& cart, const Event& event,
     mySystem(system),
     myLeftController(0),
     myRightController(0),
-    myCycleAtLastUpdate(0),
-    myColumn(0)
+    myCycleAtLastUpdate(0)
 {
   myLeftController = new CMControl(*this, Controller::Left, event, system);
   myRightController = new CMControl(*this, Controller::Right, event, system);
+
+  myLeftController->myAnalogPinValue[Controller::Nine] = Controller::maximumResistance;
+  myLeftController->myAnalogPinValue[Controller::Five] = Controller::minimumResistance;
+  myRightController->myAnalogPinValue[Controller::Nine] = Controller::minimumResistance;
+  myRightController->myAnalogPinValue[Controller::Five] = Controller::maximumResistance;
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -52,92 +57,85 @@ void CompuMate::update()
   // Handle SWCHA changes - the following comes almost directly from z26
   Controller& lp = *myLeftController;
   Controller& rp = *myRightController;
-  uInt8 IOPortA = (lp.read() << 4) | rp.read();
+  uInt8* KeyTable = StellaKeys::GetKeyState();
 
   lp.myAnalogPinValue[Controller::Nine] = Controller::maximumResistance;
   lp.myAnalogPinValue[Controller::Five] = Controller::minimumResistance;
   lp.myDigitalPinState[Controller::Six] = true;
-
   rp.myAnalogPinValue[Controller::Nine] = Controller::minimumResistance;
   rp.myAnalogPinValue[Controller::Five] = Controller::maximumResistance;
   rp.myDigitalPinState[Controller::Six] = true;
+  rp.myDigitalPinState[Controller::Three] = true;
+  rp.myDigitalPinState[Controller::Four] = true;
 
-  uInt8& column = myCart.myColumn;
-  if(IOPortA & 0x20) column = 0;
-  if(IOPortA & 0x40) column = (column + 1) % 10;
+  if (KeyTable[KBDK_LSHIFT])
+    rp.myAnalogPinValue[Controller::Five] = Controller::minimumResistance;
+  if (KeyTable[KBDK_LCTRL])
+    lp.myAnalogPinValue[Controller::Nine] = Controller::minimumResistance;
 
-  IOPortA = IOPortA | (0x0c & 0x7f);
-
-#if 0
-  switch(column)
+  switch(myCart.column())
   {
     case 0:
-      if (KeyTable[Key7]) lp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyU]) IOPortA = IOPortA & 0xfb;
-      if (KeyTable[KeyJ]) rp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyM]) IOPortA = IOPortA & 0xf7;
+      if (KeyTable[KBDK_7]) lp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_u]) rp.myDigitalPinState[Controller::Three] = false;
+      if (KeyTable[KBDK_j]) rp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_m]) rp.myDigitalPinState[Controller::Four] = false;
       break;
     case 1:
-      if (KeyTable[Key6]) lp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyY]) IOPortA = IOPortA & 0xfb;
-      if (KeyTable[KeyH]) rp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyN]) IOPortA = IOPortA & 0xf7;
+      if (KeyTable[KBDK_6]) lp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_y]) rp.myDigitalPinState[Controller::Three] = false;
+      if (KeyTable[KBDK_h]) rp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_n]) rp.myDigitalPinState[Controller::Four] = false;
       break;
     case 2:
-      if (KeyTable[Key8]) lp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyI]) IOPortA = IOPortA & 0xfb;
-      if (KeyTable[KeyK]) rp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyComma]) IOPortA = IOPortA & 0xf7;
+      if (KeyTable[KBDK_8]) lp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_i]) rp.myDigitalPinState[Controller::Three] = false;
+      if (KeyTable[KBDK_k]) rp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_COMMA]) rp.myDigitalPinState[Controller::Four] = false;
       break;
     case 3:
-      if (KeyTable[Key2]) lp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyW]) IOPortA = IOPortA & 0xfb;
-      if (KeyTable[KeyS]) rp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyX]) IOPortA = IOPortA & 0xf7;
+      if (KeyTable[KBDK_2]) lp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_w]) rp.myDigitalPinState[Controller::Three] = false;
+      if (KeyTable[KBDK_s]) rp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_x]) rp.myDigitalPinState[Controller::Four] = false;
       break;
     case 4:
-      if (KeyTable[Key3]) lp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyE]) IOPortA = IOPortA & 0xfb;
-      if (KeyTable[KeyD]) rp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyC]) IOPortA = IOPortA & 0xf7;
+      if (KeyTable[KBDK_3]) lp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_e]) rp.myDigitalPinState[Controller::Three] = false;
+      if (KeyTable[KBDK_d]) rp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_c]) rp.myDigitalPinState[Controller::Four] = false;
       break;
     case 5:
-      if (KeyTable[Key0]) lp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyP]) IOPortA = IOPortA & 0xfb;
-      if (KeyTable[KeyColon]) rp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeySlash]) IOPortA = IOPortA & 0xf7;
+      if (KeyTable[KBDK_0]) lp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_p]) rp.myDigitalPinState[Controller::Three] = false;
+      if (KeyTable[KBDK_COLON]) rp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_SLASH]) rp.myDigitalPinState[Controller::Four] = false;
       break;
     case 6:
-      if (KeyTable[Key9]) lp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyO]) IOPortA = IOPortA & 0xfb;
-      if (KeyTable[KeyL]) rp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyDot]) IOPortA = IOPortA & 0xf7;
+      if (KeyTable[KBDK_9]) lp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_o]) rp.myDigitalPinState[Controller::Three] = false;
+      if (KeyTable[KBDK_l]) rp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_PERIOD]) rp.myDigitalPinState[Controller::Four] = false;
       break;
     case 7:
-      if (KeyTable[Key5]) lp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyT]) IOPortA = IOPortA & 0xfb;
-      if (KeyTable[KeyG]) rp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyB]) IOPortA = IOPortA & 0xf7;
+      if (KeyTable[KBDK_5]) lp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_t]) rp.myDigitalPinState[Controller::Three] = false;
+      if (KeyTable[KBDK_g]) rp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_b]) rp.myDigitalPinState[Controller::Four] = false;
       break;
     case 8:
-      if (KeyTable[Key1]) lp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyQ]) IOPortA = IOPortA & 0xfb;
-      if (KeyTable[KeyA]) rp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyZ]) IOPortA = IOPortA & 0xf7;
+      if (KeyTable[KBDK_1]) lp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_q]) rp.myDigitalPinState[Controller::Three] = false;
+      if (KeyTable[KBDK_a]) rp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_z]) rp.myDigitalPinState[Controller::Four] = false;
       break;
     case 9:
-      if (KeyTable[Key4]) lp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyR]) IOPortA = IOPortA & 0xfb;
-      if (KeyTable[KeyF]) rp.myDigitalPinState[Controller::Six] = false;
-      if (KeyTable[KeyV]) IOPortA = IOPortA & 0xf7;
+      if (KeyTable[KBDK_4]) lp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_r]) rp.myDigitalPinState[Controller::Three] = false;
+      if (KeyTable[KBDK_f]) rp.myDigitalPinState[Controller::Six] = false;
+      if (KeyTable[KBDK_v]) rp.myDigitalPinState[Controller::Four] = false;
       break;
     default:
       break;
   }
-#endif
-  // Convert back to digital pins
-  rp.myDigitalPinState[Controller::One]   = IOPortA & 0x01;
-  rp.myDigitalPinState[Controller::Two]   = IOPortA & 0x02;
-  rp.myDigitalPinState[Controller::Three] = IOPortA & 0x04;
-  rp.myDigitalPinState[Controller::Four]  = IOPortA & 0x08;
 }
