@@ -24,6 +24,9 @@
     have only one 2600-daptor and want to use it as a left port
     normally, but as a right port for Star Raiders, etc).
 
+  * Added CompuMate bankswitching/controller support; the CompuMate
+    NTSC and PAL ROMs now work correctly.
+
   * Fixed bug in BoosterGrip controller emulation; the functionality
     of the booster and trigger buttons was reversed.  Related to this,
     renamed these actions in the Event Mapping dialog to be more clear.
